data/derived/comb/progs/unify/prog8364.ml.out
Characters 32-53:
  let stringOfList f l = sepConcat(";", List.map(f, l));;
                                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
